[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telebackup-telegram-downloader"
version = "1.2.6"
description = "Lightweight launcher: opens TeleBackup GitHub Releases; full app is distributed via Releases/website."
readme = "README_PYPI.md"
requires-python = ">=3.9"
authors = [{ name = "TeleBackup Team" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Internet",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/xwc9527/TeleBackup-telegram-backup"
Repository = "https://github.com/xwc9527/TeleBackup-telegram-backup"
Documentation = "https://chatdex.cc/zh/blog"
Download = "https://chatdex.cc/zh/download"

[project.scripts]
telebackup-telegram-downloader = "telebackup_telegram_downloader.cli:main"
telebackup = "telebackup_telegram_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["telebackup_telegram_downloader*"]